<resources>
    <string name="app_name">TargetTimer</string>
    <string name="new_timer_label">Add Timer...</string>
    <string name ="timer_title">Title</string>
    <string name="timer_long">Long</string>
    <string name="timer_short">Short</string>
    <string name="timer_work">Work</string>
    <string name="timer_remaining">00:00</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_start">Start</string>
    <string name="time_list_item_title">Title</string>
    <string name="time_list_item_worked">Worked: 00h 00m</string>
</resources>
